--- a/src/app/classroom/components/footer-toolbar/footer-toolbar.component.scss
+++ b/src/app/classroom/components/footer-toolbar/footer-toolbar.component.scss
@@ -1,9 +1,9 @@
 .footer-toolbar {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
+  // width: 100%;
+  // position: fixed;
+  // bottom: 0;
   height: var(--main-header-size);
-  z-index: 20;
+  // z-index: 20;
 
   .active fa-icon {
     color: var(--light-theme-primary);
