--- a/src/app/classroom/components/title-logo/title-logo.component.scss
+++ b/src/app/classroom/components/title-logo/title-logo.component.scss
@@ -7,5 +7,6 @@
 .a13-tooltip {
   text-align: center;
   color: white !important;
+  font-size: 1rem;
   background: rgba(50, 50, 50, 0.95) !important;
 }
