--- a/src/app/classroom/components/header/header.component.scss
+++ b/src/app/classroom/components/header/header.component.scss
@@ -1,10 +1,10 @@
 .header {
-  position: fixed;
-  top: 0;
-  width: 100%;
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
   height: var(--main-header-size);
   min-height: var(--main-header-size);
-  z-index: 20;
+  // z-index: 20;
   white-space: normal;
 
   .title {
@@ -45,8 +45,9 @@
 }
 
 .title-logo {
-  top: 5px;
-  left: calc(100vw/2 - 22px);
+  position: absolute;
+  top: -3px;
+  left: calc(100%/2 - 22px);
   width: calc(var(--main-header-size) - 10px);
 }
 
