--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="studentFormGroup" autocomplete="off" class="mat-typography">
   <header class="dialog-header padding-content-h pt-1 pb-1" [ngClass]="{'height-auto': !isTruncated}" fxLayout="row" fxLayoutAlign="space-between center">
     <!-- Title -->
-    <h2 class="m-0 pointer" [ngClass]="{truncate: !isTruncated}" (click)="isTruncated=!isTruncated" fxFlex="calc(100% - 140px)">
+    <h2 class="m-0 pointer dialog-title" [ngClass]="{truncate: !isTruncated}" (click)="isTruncated=!isTruncated" fxFlex="calc(100% - 140px)">
       <!-- {{(data.isClone ? 'DAY.CLONE' : data.idDay ? 'DAY.EDIT' : 'DAY.ADD') | translate}} -->
       {{(studentFormGroup?.value?.personalFormGroup?.nameCtrl ? studentFormGroup?.value?.personalFormGroup?.nameCtrl : data.isClone ? 'DAY.CLONE' : data.idDay ? 'DAY.EDIT' : 'DAY.ADD') | translate}}
     </h2>
