Tabindex authentication forms

--- a/src/app/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/authentication/components/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
   <!-- Email -->
   <mat-form-field class="mb-q" [appearance]="'inputAppearance' | settingValue">
     <mat-label>{{'EMAIL' | translate}}</mat-label>
-    <input matInput type="text" required formControlName="email">
+    <input matInput tabindex="1" type="text" required formControlName="email">
     <button mat-button *ngIf="formGroup.controls.email.value" matSuffix mat-icon-button attr.aria-label="{{'RESET_EMAIL' | translate}}" (click)="formGroup.controls.email.reset()">
       <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
     </button>
@@ -15,7 +15,7 @@
 
   <!-- Forgot button -->
   <div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center">
-    <button class="sign-button" fxFlex="100" mat-flat-button color="warn" (click)="forgotPassword()" attr.arial-label="{{'SIGN.FORGOT'| translate}}">
+    <button tabindex="2" class="sign-button" fxFlex="100" mat-flat-button color="warn" (click)="forgotPassword()" attr.arial-label="{{'SIGN.FORGOT'| translate}}">
       <div class="pt-H">{{'SIGN.FORGOT' | translate}}</div>
     </button>
   </div>
@@ -24,5 +24,5 @@
 <!-- Go to SignIn button -->
 <div class="mt-1" fxLayout="row" fxLayoutAlign="end center">
   <span class="mat-body mat-hint mr-h">{{'MSG.YES_ACCOUNT' | translate}}</span>
-  <button mat-button color="accent" [routerLink]="['/authentication/signIn']" attr.arial-label="{{'SIGN.UP' | translate}}">{{'SIGN.IN' | translate}}</button>
+  <button tabindex="3" mat-button color="accent" [routerLink]="['/authentication/signIn']" attr.arial-label="{{'SIGN.UP' | translate}}">{{'SIGN.IN' | translate}}</button>
 </div>
