--- a/src/app/classroom/components/subject-creation/subject-creation.component.html
+++ b/src/app/classroom/components/subject-creation/subject-creation.component.html
@@ -22,7 +22,7 @@
       <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="40" fxFlex.xs="100">
         <mat-label>{{'FORM.SUBJECTS_NAME' | translate}}
         </mat-label>
-        <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.SUBJECTS_NAME' | translate}}" autocomplete="off">
+        <input matInput tabindex="1" required formControlName="nameCtrl" attr.aria-label="{{'FORM.SUBJECTS_NAME' | translate}}" autocomplete="off">
         <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="font"></fa-icon>
         <fa-icon *ngIf="validatingName" matSuffix class="mat-icon-20 ml-q  mat-hint rotate-animation" icon="spinner"></fa-icon>
         <mat-error *ngIf="subjectFormGroup.controls.nameCtrl.hasError('nameTaken')">
@@ -42,8 +42,8 @@
 
   <footer class="dialog-footer padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="end center">
     <!-- Action buttons -->
-    <button mat-button color="warn" attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">{{'CANCEL' | translate}}</button>
-    <button class="ml-h" mat-flat-button [color]="data.isClone || !data?.entity?.id ? 'primary' : 'accent'" [disabled]="validatingName" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{(data.isClone ? 'CLONE' : data?.entity?.id ? 'SAVE' : 'CREATE_SUBJECT') | translate}}
+    <button tabindex="4" mat-button color="warn" attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">{{'CANCEL' | translate}}</button>
+    <button tabindex="3" class="ml-h" mat-flat-button [color]="data.isClone || !data?.entity?.id ? 'primary' : 'accent'" [disabled]="validatingName" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{(data.isClone ? 'CLONE' : data?.entity?.id ? 'SAVE' : 'CREATE_SUBJECT') | translate}}
     </button>
   </footer>
 </form>
