--- a/src/app/classroom/settings/components/configuration/configuration.component.html
+++ b/src/app/classroom/settings/components/configuration/configuration.component.html
@@ -52,12 +52,22 @@
     <h3 class="mat-h2 mat-hint">{{'BEHAVIOR.TITLE' | translate}}</h3>
 
     <div class="mb-2" fxLayout="row" fxLayoutAlign="start" fxLayoutGap="1rem">
-      <fa-icon class="mat-icon-20 color-primary color-primary" [icon]="canPanSideMenu ? 'stream' : 'bars'"></fa-icon>
+      <fa-icon class="mat-icon-20 color-primary color-primary" [icon]="canSlideSideMenu ? 'stream' : 'bars'"></fa-icon>
       <div fxLayout="column">
-        <mat-slide-toggle labelPosition="before" (change)="togglePanSideMenu()" [(ngModel)]="canPanSideMenu">
-          {{'BEHAVIOR.PAN_SIDEMENU' | translate}}
+        <mat-slide-toggle labelPosition="before" (change)="toggleSlideSideMenu()" [(ngModel)]="canSlideSideMenu">
+          {{'BEHAVIOR.SLIDE_SIDEMENU' | translate}}
         </mat-slide-toggle>
-        <mat-hint class="mat-hint txt-0 mt-h">{{'BEHAVIOR.PAN_SIDEMENU_HINT' | translate}}</mat-hint>
+        <mat-hint class="mat-hint txt-0 mt-h">{{'BEHAVIOR.SLIDE_SIDEMENU_HINT' | translate}}</mat-hint>
+      </div>
+    </div>
+
+    <div class="mb-2" fxLayout="row" fxLayoutAlign="start" fxLayoutGap="1rem">
+      <fa-icon class="mat-icon-20 color-primary color-primary" [icon]="canSlideRoutes ? 'stream' : 'bars'"></fa-icon>
+      <div fxLayout="column">
+        <mat-slide-toggle labelPosition="before" (change)="toggleSlideRoutes()" [(ngModel)]="canSlideRoutes">
+          {{'BEHAVIOR.SLIDE_ROUTES' | translate}}
+        </mat-slide-toggle>
+        <mat-hint class="mat-hint txt-0 mt-h">{{'BEHAVIOR.SLIDE_ROUTES_HINT' | translate}}</mat-hint>
       </div>
     </div>
   </div>
