--- a/src/app/classroom/components/classroom/classroom.component.html
+++ b/src/app/classroom/components/classroom/classroom.component.html
@@ -12,8 +12,8 @@
       <a13-header></a13-header>
 
       <!-- Router -->
-      <main class="main-content-bg overflow-scroll mat-typography">
-        <router-outlet></router-outlet>
+      <main class="main-content-bg overflow-scroll mat-typography" [@routerAnimations]="prepareRouteTransition(o)">
+        <router-outlet #o="outlet"></router-outlet>
       </main>
 
       <!-- Footer toolbar -->
