--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -7,7 +7,7 @@
     </h2>
 
     <!-- Favorite -->
-    <button mat-button (click)="toggleBooleanCrl('favoriteCtrl')" [matTooltip]="'MSG.MARK_STUDENT_FAV' | translate" [matTooltipShowDelay]="650">
+    <button type="button" mat-button (click)="toggleBooleanCrl('favoriteCtrl')" [matTooltip]="'MSG.MARK_STUDENT_FAV' | translate" [matTooltipShowDelay]="650">
       <span class="mat-small mat-hint mr-q"> {{'FAVORITE' | translate}} </span>
       <fa-icon [ngClass]="{'star-active': studentFormGroup?.value.booleanFormGroup.favoriteCtrl}" class="mat-icon-22 mat-hint" icon="star"></fa-icon>
     </button>
@@ -230,7 +230,7 @@
   <footer class="dialog-footer padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="space-between center">
 
     <!-- Archived -->
-    <button mat-button (click)="toggleBooleanCrl('archivedCtrl')" [matTooltip]="'ARCHIVE_STUDENT' | translate" [matTooltipShowDelay]="650">
+    <button type="button" mat-button (click)="toggleBooleanCrl('archivedCtrl')" [matTooltip]="'ARCHIVE_STUDENT' | translate" [matTooltipShowDelay]="650">
       <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'error-color': studentFormGroup?.value.booleanFormGroup.archivedCtrl}" [icon]="studentFormGroup?.value.booleanFormGroup.archivedCtrl ? 'box' : 'box-open'"></fa-icon>
       <span class="mat-small mat-hint ml-q"> {{(studentFormGroup?.value.booleanFormGroup.archivedCtrl ? 'ARCHIVED'  : 'ARCHIVE') | translate}} </span>
     </button>
