--- a/src/app/shared/components/day-creation/day-creation.component.html
+++ b/src/app/shared/components/day-creation/day-creation.component.html
@@ -7,7 +7,7 @@
     </h2>
 
     <!-- Favorite -->
-    <button mat-button (click)="toggleBooleanCrl('dayFavoriteCtrl')" [matTooltip]="'MSG.MARK_DAY_FAV' | translate" [matTooltipShowDelay]="650" fxFlex="nogrow">
+    <button type="button" mat-button (click)="toggleBooleanCrl('dayFavoriteCtrl')" [matTooltip]="'MSG.MARK_DAY_FAV' | translate" [matTooltipShowDelay]="650" fxFlex="nogrow">
       <span class="mat-small mat-hint mr-q"> {{'FAVORITE' | translate}} </span>
       <fa-icon [ngClass]="{'star-active': dayFormGroup?.value.dayFavoriteCtrl}" class="mat-icon-22 mat-hint" icon="star"></fa-icon>
     </button>
@@ -53,7 +53,7 @@
   <footer class="dialog-footer padding-content-h pt-1 pb-1" fxLayout="row" fxLayoutAlign="space-between center">
 
     <!-- Archived -->
-    <button mat-button (click)="toggleBooleanCrl('dayArchivedCtrl')" [matTooltip]="'ARCHIVE_DAY' | translate" [matTooltipShowDelay]="650">
+    <button type="button" mat-button (click)="toggleBooleanCrl('dayArchivedCtrl')" [matTooltip]="'ARCHIVE_DAY' | translate" [matTooltipShowDelay]="650">
       <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'error-color': dayFormGroup?.value.dayArchivedCtrl}" [icon]="dayFormGroup?.value.dayArchivedCtrl ? 'box' : 'box-open'"></fa-icon>
       <span class="mat-small mat-hint ml-q"> {{(dayFormGroup?.value.dayArchivedCtrl ? 'ARCHIVED'  : 'ARCHIVE') | translate}} </span>
     </button>
