--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -173,7 +173,7 @@
     </mat-tab-group>
 
     <!-- Floating button -->
-    <a13-floating-button [pulse]="!data?.dayList?.length" text="DAY.ADD" tooltip="DAY.ADD" icon="edit" (click)="createDay(student)">
+    <a13-floating-button [pulse]="!dayList?.length" text="DAY.ADD" tooltip="DAY.ADD" icon="edit" (click)="createDay(student)">
     </a13-floating-button>
   </div>
 </section>
