Grid layout student list

--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -162,7 +162,7 @@
             </mat-option>
           </mat-optgroup>
         </mat-select>
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="guitar"></fa-icon>
+        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="music"></fa-icon>
         <mat-hint align="start">{{'HINT.INSTRUMENT' | translate}}</mat-hint>
       </mat-form-field>
 
